# Clouds_AI

./: README.md  proto-model.py
Model-LSTM/: solver3D.py
demo-app/: CMakeLists.txt
demo-app/inc/: Axis.h  Cloud.h  Cumulus.h  CumulusIA.h  Defines.h  GRUNet.h  Main.h  Mountain.h  NeuralNet.h  Shader.h
demo-app/src/: Camera.cpp  Cumulus.cpp  CumulusIA.cpp  FluidCPU.cpp  GRUNet.cpp  LSTMNet.cpp  Main.cpp  Model.cpp  Morph.cpp  Mountain.cpp  NeuralNet.cpp  PrecomputeCPU.cpp  PrecomputeCUDA.cu  Tool.cpp
demo-app/x64/data/shaders/: clouds_CUMULUS_MOUNT.frag  clouds_CUMULUS_SEA.frag  clouds_META_MOUNT.frag  clouds_MORPH_MOUNT.frag
demo_app/inc/: Axis.h  Camera.h  Canvas.h  Cloud.h  Cumulus.h  Defines.h  Exception.h  Fluid.h  FluidCPU.h  GRUNet.h  LSTMNet.h  Lsystem.h  Main.h  Metacloud.h  Model.h  Mountain.h  NeuralNet.h  Precompute.h  PrecomputeCPU.h  PrecomputeCUDA.h  Shader.h
demo_app/src/: Axis.cpp  Cloud.cpp  CumulusIA.cpp  FluidCPU.cpp  FluidCUDA.cu  GRUNet.cpp  LSTMNet.cpp  Lsystem.cpp  Main.cpp  Morph.cpp  NeuralNet.cpp  PrecomputeCPU.cpp  Shader.cpp
proto-model-LSTM/: model.py
training/: RNN_Training.py
